--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "bootstrap": "^4.2.1",
     "cross-env": "^5.2.0",
     "gh-pages": "^2.0.1",
     "i": "^0.3.6",
@@ -16,8 +15,9 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -55,7 +55,8 @@
     "@babel/register": "^7.0.0",
     "@babel/runtime": "^7.2.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.1.0",
+    "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^1.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.4.0",
@@ -67,8 +68,12 @@
     "eslint-plugin-react": "^7.12.3",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "imagemin": "^6.1.0",
     "img-loader": "^3.0.1",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "prettier": "^1.15.3",
+    "semantic-ui-react": "^0.85.0",
     "url-loader": "^1.1.2",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14",
